--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 # used for the Debug-log
 logging.level.org.springframework=DEBUG
 logging.level.root=DEBUG
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
